# confluence-offline

./: README.md  confluence.yaml  metaconf.py  setup.cfg  setup.py
coff/: __init__.py  cli.py
