[bumpversion]
current_version = 0.1.4-dev0
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = prod
first_value = dev
values = 
	dev
	prod

[bumpversion:part:build]

[bumpversion:file:VERSION]

[bumpversion:file:setup.py]

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[coverage:run]
source = coff
omit = coff/tests/*
parallel = True
concurrency = 
	thread

[metadata]
name = confluence-offline
license = GPL-2+
license_file = COPYING
author = V.S.
author_email = vladimir.savchenko@unige.ch
url = https://github.com/volodymyrss/confluence-offline/releases/tag/0.1.0
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: POSIX
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Internet
	Topic :: Scientific/Engineering

[options]
packages = find:
install_requires = 
	lxml
	six
	coloredlogs
tests_require = 
	pytest

[options.entry_points]
console_scripts = 
	co = coff.cli:main

[options.package_data]
oda_evaluate.tests.data = *.xml

